--- a/style.css
+++ b/style.css
@@ -1,47 +1,106 @@
 * {
     box-sizing: border-box;
-  }
-  #header{
-    background-color:lightsteelblue;
-    padding: 5px 0;
-  }
-  h1{
-    text-align: center;
-  }
+}
+#header{
+background-color:lightsteelblue;
+padding-top: 10px;
+
+}
+h1{
+text-align: center;
+margin: 10px 0;
+font-size: 20px;
+}
+
+#controller{
+    background-color: turquoise;
+    display: flex;
+}
+label{
+    margin: 0 30px;
+}
+
+input{
+    width: 16px;
+    height: 16px;
+}
+
 #bookshelf{
-    height: 85vh;
+    /* height: 85vh; */
     overflow: auto;
 }
-ul{
-    list-style: none;
-}
+
 #bookshelf > ul{
-  display: flex;
-  flex-wrap: wrap;
-  width: 100%;
-  min-width: 650px;
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    list-style: none;
+    padding: 0;
+    margin: 0;
 }
 .book{
     border: 1px dashed gray;
     border-radius: 5px;
-    width: 48%;
+    width: 49%;
     margin: 0.5%;  
-    padding: 10px;    
+    padding: 4px;    
+}
+
+table{
+    width: 100%;
+}
+
+.tip {
+    position: relative;
+    display: flex;
+    
+      cursor: pointer;
+}
+.tip:hover {
+    color: blue;
+}
+.tip:hover .more{
+    display:block;
+}
+.more{
+    display: none;
+    position: absolute;
+    
+    /* position: relative; */
+    top: 75%;
+    left: 20%;
+    width: 80%;
+    background-color: #6e6e6e;
+    color: #fff;
+    padding: 8px;
+    border-radius: 4px;
+    z-index: 1;
+
+    /* max-height: 120px;
+    overflow: auto; */
+}
+
+.tip button{
+    padding: 3px 5px;
+    height: fit-content;
 }
 
 tr{
     align-items: start;
 }
 
-
 tr:nth-of-type(even){
-    background-color: #f0f0f0;
+    background-color: #f1f1f1;
 }
 tr:nth-of-type(odd){
-    background-color: rgb(197, 196, 196);
+    background-color:  #e5e5e5;
+}
+
+td{
+    padding-left: 5px;
 }
 
 td:nth-of-type(odd){
-
     font-weight: bold;
+    width: 22%;
 }
